<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Discard</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="no_internet">Unable to connect to the internet</string>
    <string name="search_hint">Search filter</string>
    <string name="tools_book_desc">Learning a complex new language is no easy task especially when it s an object-oriented computer programming language like Java. You might think the problem is your brain. It seems to have a mind of its own, a mind that doesn\'t always want to take in the dry, technical stuff you\'re forced to study.</string>
    <string name="tools_book_subtitle">Some subtitle</string>
    <string name="tools_book_title">Head First Java</string>
    <string name="message_book_deleted">The book was removed</string>
    <string name="tools_categories">Java, Object-Orientated Software Design</string>
    <string name="tools_authors">Kathy Sierra, Bert Bates</string>
    <string name="book_added">The book has been saved</string>
    <string name="invalid_ean">Invalid ean</string>
</resources>
