<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="it.jaschke.alexandria.AddBook">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/fullBookCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/book_cover"
            android:scaleType="centerCrop"
            tools:src="@drawable/book" />

        <LinearLayout
            android:id="@+id/book_details"
            style="@style/AppTheme.BookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/fullBookCover"
            android:orientation="horizontal"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/bookTitle"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                tools:title="@string/tools_book_title" />

            <TextView
                android:id="@+id/bookSubTitle"
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/layout_padding"
                android:layout_marginStart="@dimen/layout_padding"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/book_subtitle"
                tools:title="@string/tools_book_subtitle" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/delete_button"
            android:layout_below="@id/book_details">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/layout_padding">

                <TextView
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_padding"
                    tools:text="@string/tools_book_desc" />

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/tools_categories" />

                <TextView
                    android:id="@+id/authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="10"
                    android:textStyle="bold"
                    tools:text="@string/tools_authors" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@id/delete_button"
            style="?android:attr/actionButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/gray_light"
            android:gravity="center"
            android:padding="@dimen/layout_padding"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textSize="14sp" />
    </RelativeLayout>


</FrameLayout>
